@@ -1,6 +1,6 @@
 ;;; ebuild-mode-keywords.el
 
-;; Copyright 2006-2020 Gentoo Authors
+;; Copyright 2006-2021 Gentoo Authors
 
 ;; Author: Matthew Kennedy <mkennedy@gentoo.org>
 ;;	Diego Pettenò <flameeyes@gentoo.org>
@@ -99,10 +99,10 @@
 ;; comment-face will always override the eclass documentation strings
 (defvar ebuild-mode-keywords-eclass-documentation
   '(("@AUTHOR" "@BLURB" "@BUGREPORTS" "@CODE" "@DEAD" "@DEFAULT_UNSET"
-     "@DESCRIPTION" "@ECLASS" "@ECLASS-VARIABLE" "@EXAMPLE" "@FUNCTION"
-     "@INTERNAL" "@MAINTAINER" "@OUTPUT_VARIABLE" "@PRE_INHERIT" "@REQUIRED"
-     "@RETURN" "@ROFF" "@SUPPORTED_EAPIS" "@USAGE" "@USER_VARIABLE"
-     "@VARIABLE" "@VCSURL")
+     "@DEPRECATED" "@DESCRIPTION" "@ECLASS" "@ECLASS-VARIABLE" "@EXAMPLE"
+     "@FUNCTION" "@INTERNAL" "@MAINTAINER" "@OUTPUT_VARIABLE" "@PRE_INHERIT"
+     "@REQUIRED" "@RETURN" "@ROFF" "@SUBSECTION" "@SUPPORTED_EAPIS" "@USAGE"
+     "@USER_VARIABLE" "@VARIABLE" "@VCSURL")
     font-lock-type-face))
 
 (defvar ebuild-mode-keywords-warn
